feat: added initial HTML. Added projects, header, footer, about me section

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+.overlay-bg {
+  background: rgba(255, 255, 255, 0.75);
+  backdrop-filter: blur(8px);
+}
+section {
+  scroll-margin-top: 4rem;
+}
